--- a/index.html
+++ b/index.html
@@ -8,6 +8,23 @@
   <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
-  
+
+  <header></header>
+
+  <main>
+    <div class="conteiner clearfix">
+      <section class="junbotron">
+
+      </section>
+
+      <section class="main-content">
+
+      </section>
+
+    </div>
+  </main>
+
+  <footer></footer>
+
 </body>
 </html>
