--- a/index.html
+++ b/index.html
@@ -13,11 +13,18 @@
 
   <main>
     <div class="conteiner clearfix">
-      <section class="junbotron">
 
-      </section>
+      <section class="junbotron"></section>
 
       <section class="main-content">
+
+        <div class="content-title"></div>
+
+        <aside class="side-left"></aside>
+
+        <section class="content-info"></section>
+        
+        <aside class="side-right"></aside>
 
       </section>
 
