--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
       <section class="junbotron"></section>
 
-      <section class="main-content">
+      <section class="main-content clearfix">
 
         <div class="content-title"></div>
 
